--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -21,7 +21,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build
+      - name: Build project
         run: npm run build
-
-      # (לא חובה) תוכל להוסיף כאן Deploy אם תשתמש ב־Firebase/Netlify וכו'
