feat: Optimize CI/CD - only run Build on push, E2E and Security on PR/manual

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,8 +2,7 @@
 name: E2E Tests
 
 on:
-  push:
-    branches: [main]
+  # Only run on workflow dispatch (manual trigger) or pull requests
   pull_request:
     branches: [main]
   workflow_dispatch:
