--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -1,13 +1,13 @@
 name: Security Scan
 
 on:
-  push:
-    branches: [ main, develop ]
+  # Only run on pull requests and scheduled scans
   pull_request:
     branches: [ main ]
   schedule:
     # Run weekly security scan every Monday at 9 AM UTC
     - cron: '0 9 * * 1'
+  workflow_dispatch:
 
 jobs:
   security-scan:
