--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "test:unit": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:smoke": "playwright test tests/specs/smoke.spec.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -75,6 +79,9 @@
     "@eslint/js": "^9.9.0",
     "@playwright/test": "^1.53.1",
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
@@ -93,6 +100,6 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.19",
-    "vitest": "^2.1.8"
+    "vitest": "^3.2.4"
   }
 }
