--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,28 +8,28 @@ on:
   workflow_dispatch:
   schedule:
     # Run weekly security scan every Monday at 9 AM UTC
-    - cron: '0 9 * * 1'
+    - cron: "0 9 * * 1"
 
 env:
-  NODE_VERSION: '18'
+  NODE_VERSION: "18"
 
 jobs:
   ci-cd:
     name: CI/CD Pipeline
     runs-on: ubuntu-latest
     timeout-minutes: 45
-    
+
     steps:
       # Setup
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          
+          cache: "npm"
+
       - name: Install dependencies
         run: npm ci
 
@@ -46,9 +46,9 @@ jobs:
         if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
         uses: zaproxy/action-full-scan@v0.10.0
         with:
-          target: 'https://preview--amiram.lovable.app'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
+          target: "https://preview--amiram.lovable.app"
+          rules_file_name: ".zap/rules.tsv"
+          cmd_options: "-a"
         continue-on-error: true
 
       # E2E Tests
