--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Build and Deploy
 
 on:
   push:
@@ -15,7 +15,7 @@ env:
 
 jobs:
   ci-cd:
-    name: CI/CD Pipeline
+    name: Build and Deploy
     runs-on: ubuntu-latest
     timeout-minutes: 45
 
