--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -69,7 +69,7 @@ jobs:
         if: always()
         run: |
           if [ "${{ job.status }}" == "success" ]; then
-            echo "✅ CI/CD Pipeline completed successfully"
+            echo "✅ Build and Deploy completed successfully"
           else
-            echo "❌ CI/CD Pipeline failed"
+            echo "❌ Build and Deploy failed"
           fi
