--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 # ENVIRONMENT VARIABLES
 # ==========================
 .env
+.env.*
 .env.*.local
 .env.local
 .env.development.local
 .env.production.local
+env.
 
 # ==========================
 # LOG FILES
