--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.56.2",
+    "@types/lodash-es": "^4.17.12",
     "archiver": "^7.0.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -56,6 +57,7 @@
     "framer-motion": "^12.16.0",
     "fs-extra": "^11.3.0",
     "input-otp": "^1.2.4",
+    "lodash-es": "^4.17.21",
     "lovable-tagger": "^1.1.8",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
