--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lovable-tagger": "^1.1.8",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "^8.10.1",
