--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
+    "@google-cloud/storage": "^7.16.0",
+    "@google-cloud/text-to-speech": "^6.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -47,7 +49,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@supabase/supabase-js": "^2.50.0",
+    "@supabase/supabase-js": "^2.54.0",
     "@tanstack/react-query": "^5.56.2",
     "@types/lodash-es": "^4.17.12",
     "archiver": "^7.0.1",
@@ -56,8 +58,9 @@
     "cli-progress": "^3.12.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.3.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.16.0",
@@ -67,6 +70,7 @@
     "lovable-tagger": "^1.1.8",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.2.0",
